objects/Demo__c.object
<CustomObject>
    <fields>
        <fullName>Check_Status__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Check Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Demo</label>
        <referenceTo>Demo__c</referenceTo>
        <relationshipLabel>Demos</relationshipLabel>
        <relationshipName>Demos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>date_time__c</fullName>
        <label>date/time</label>
        <type>DateTime</type>
    </fields>
</CustomObject>